# fapi_project

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  settings.py
api/: __init__.py  library_api.py
database/: env.py
database/models/: __init__.py  base.py  book.py  user.py  writer.py
database/versions/: 0c6fd55cc976_add_users_table.py  4eba5ff01088_add_book_and_writers_tables.py  57ea1b386ba2_add_book_and_writers_tables.py  6496999bd191_add_books_table.py  867b0e038539_add_book_and_writers_tables.py
helpers/: __init__.py  mysql_connection_string.py
schemas/: __init__.py  library_schemas.py
services/: __init__.py  library_service.py
