[tool.poetry]
name = "fapi-project"
version = "0.1.0"
description = ""
authors = ["Oleksandr Chepurnyi <Ñhepurnyi_oo@groupbwt.com>"]
readme = "README.md"
packages = [{include = "fapi_project"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.5"
alembic = "^1.9.1"
sqlalchemy = "1.4.41"
mysqlclient = "^2.1.1"
ormar = "^0.12.0"
aiomysql = "^0.1.1"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
